сделал установщик клиента